--- a/style/app.css
+++ b/style/app.css
@@ -16,7 +16,7 @@ header {
     border-bottom: 1px solid #249ef7;
     position: relative;
     z-index: 2;
-    transition: top 0.5s ease, padding 0.5s ease; 
+    transition: top 0.5s ease, padding 0.5s ease;
     top: 0;
 }
 
@@ -169,11 +169,11 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-box-orient: vertical;
     min-height: 51px;
     display: flex;
-    align-items: center;   
+    align-items: center;
 }
 .card-ai-job span{
     font-size: 16px;
-    color: #434343;   
+    color: #434343;
 }
 .card-ai .btn{
     font-family: 'Montserrat', sans-serif;
@@ -181,7 +181,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 16px;
     font-weight: bold;
     border: 0;
-    width: 100%;    
+    width: 100%;
     padding: 12px;
     margin-top: 0.5em;
 }
@@ -226,20 +226,20 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
 }
 .ai-contacts-scroll::-webkit-scrollbar {
-  width: 4px; 
+  width: 4px;
 }
 .ai-contacts-scroll::-webkit-scrollbar-thumb {
-  background-color: #888; 
-  border-radius: 5px; 
+  background-color: #888;
+  border-radius: 5px;
 }
 .ai-contacts-scroll::-webkit-scrollbar-thumb:hover {
-  background-color: #555; 
+  background-color: #555;
 }
 .ai-contacts-scroll::-webkit-scrollbar-track {
-  background-color: #eee; 
+  background-color: #eee;
 }
 .ai-contacts-scroll::-webkit-scrollbar-track:hover {
-  background-color: #ddd; 
+  background-color: #ddd;
 }
 .ai-contacts-item{
     padding: 1em;
@@ -260,7 +260,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    padding: 0; 
+    padding: 0;
 }
 .ai-contacts-item .card-vip img{
     max-width: 12px;
@@ -296,16 +296,16 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
   display: -webkit-box;
   -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;  
-  overflow: hidden;    
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .ai-contacts-job{
     color: #7E7E7E;
     font-size: 16px;
   display: -webkit-box;
   -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;  
-  overflow: hidden;    
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .ai-contacts-image{
     overflow: hidden;
@@ -335,7 +335,7 @@ h1, h2, h3, h4, h5, h6 {
     overflow: hidden;
     background: #0579ce;
     min-width: 55px;
-    min-height: 55px;    
+    min-height: 55px;
 }
 .ai-chat-top-image img{
     width: 100%;
@@ -425,7 +425,7 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;    
+    gap: 10px;
     opacity: 1;
     transition: opacity 0.3s ease;
 }
@@ -507,7 +507,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 6px 16px;
     font-weight: 300;
     display: inline-block;
-    font-size: 16px;  
+    font-size: 16px;
 }
 .chat-input{
     display: flex;
@@ -560,20 +560,20 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFF !important;
 }
 #overflow-chat::-webkit-scrollbar {
-  width: 8px; 
+  width: 8px;
 }
 #overflow-chat::-webkit-scrollbar-thumb {
-  background-color: #1995f0; 
-  border-radius: 5px; 
+  background-color: #1995f0;
+  border-radius: 5px;
 }
 #overflow-chat::-webkit-scrollbar-thumb:hover {
-  background-color: #555; 
+  background-color: #555;
 }
 #overflow-chat::-webkit-scrollbar-track {
-  background-color: #eee; 
+  background-color: #eee;
 }
 #overflow-chat::-webkit-scrollbar-track:hover {
-  background-color: #ddd; 
+  background-color: #ddd;
 }
 #toast-container>div{
     opacity: 1;
@@ -602,7 +602,7 @@ h1, h2, h3, h4, h5, h6 {
     background: transparent;
     color: #FFF;
     border: 1px solid #EAEAEA;
-    border-radius: 7px;        
+    border-radius: 7px;
 }
 .copy-text {
     display: flex;
@@ -708,17 +708,17 @@ html[dir="rtl"] .toggle-password{
 
 /* Track */
 .wrapper-image-ia::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 .wrapper-image-ia::-webkit-scrollbar-thumb {
-  background: #888; 
+  background: #888;
 }
 
 /* Handle on hover */
 .wrapper-image-ia::-webkit-scrollbar-thumb:hover {
-  background: #555; 
+  background: #555;
 }
 .ia-image-prompt-label{
     padding: 5px 10px;
@@ -820,7 +820,7 @@ footer img:hover{
 .form-floating>label{
     color: #0478ce;
     font-weight: bold;
-    opacity: 1 !important;    
+    opacity: 1 !important;
 }
 .btn-options-input{
     display: none;
@@ -867,7 +867,7 @@ footer img:hover{
 }
 #inner-page{
     background: #004e89;
-    padding: 1.2em 0;    
+    padding: 1.2em 0;
 }
 #inner-page h3, #inner-page h1{
     margin-bottom: 0;
@@ -886,7 +886,7 @@ footer img:hover{
     margin: 0 0 16px;
     overflow: hidden;
     padding: 16px;
-    position: relative;    
+    position: relative;
 }
 .user-panel-options li{
     list-style: none;
@@ -950,7 +950,7 @@ footer img:hover{
     font-weight: bold;
 }
 .color-blue{
-   color: #0260a5;   
+   color: #0260a5;
 }
 .list-group-item:hover{
    background: #f3f3f3;
@@ -987,11 +987,11 @@ footer img:hover{
   0% {
     box-shadow: 0 0 0 0 rgba(120, 198, 255, 0.7);
   }
-  
+
   70% {
     box-shadow: 0 0 0 10px rgba(120, 198, 255, 0);
   }
-  
+
   100% {
     box-shadow: 0 0 0 0 rgba(120, 198, 255, 0);
   }
@@ -1030,7 +1030,7 @@ footer img:hover{
     position: absolute;
     background: #d10000;
     border-radius: 0 0 0 6px;
-    padding: 7px 1em;    
+    padding: 7px 1em;
 }
 .form-filter{
     background: #05497c;
@@ -1151,7 +1151,7 @@ header .btn-close span{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 1em;    
+    padding: 0 1em;
 }
 .theme-icon i{
     color: #FFF;
@@ -1294,8 +1294,8 @@ display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis; 
-  min-height: 75px;   
+  text-overflow: ellipsis;
+  min-height: 75px;
 }
 .card-post-cta{
     margin: 1em 0;
@@ -1307,7 +1307,7 @@ display: -webkit-box;
 .wrapper-category {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 20px; 
+    gap: 20px;
 }
 
 .wrapper-category-item {
@@ -1339,10 +1339,10 @@ display: -webkit-box;
 }
 
 .wrapper-category-item img {
-    width: 100%;             
-    max-width: 65px; 
-    max-height: 65px;       
-    height: auto;            
+    width: 100%;
+    max-width: 65px;
+    max-height: 65px;
+    height: auto;
     opacity: 0.8;
 }
 .wrapper-category-item img:hover{
@@ -1420,7 +1420,7 @@ hr{
     min-height: auto;
 }
 .card-ai-theme-2 .card-ai-image img{
- transition: all 0.2s ease-in-out;   
+ transition: all 0.2s ease-in-out;
 }
 .card-ai-theme-2:hover .card-ai-image img{
     opacity: 0.8;
@@ -1470,7 +1470,7 @@ hr{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 8px 0;    
+    gap: 8px 0;
 }
 .chat-action-buttons{
     background: #e6f4ff;
@@ -1495,7 +1495,7 @@ hr{
     top: -2px;
 }
 .chat-action-buttons:checked{
-    border:none !important;    
+    border:none !important;
 }
 .dropdown-item-chat li:hover{
     background: #f3f3f3;
@@ -1670,15 +1670,15 @@ hr{
 .package-wrapper-prompt {
   display: flex;
   flex-wrap: wrap;
-  gap: 15px; 
+  gap: 15px;
 }
 .package-wrapper-prompt-thumb img {
-  border-radius: 50%; 
+  border-radius: 50%;
   width: 50px;
   height: 50px;
   object-fit: cover;
   image-rendering: -webkit-optimize-contrast;
-  image-rendering: crisp-edges;   
+  image-rendering: crisp-edges;
   transition: all 0.3s ease-out;
 }
 .package-wrapper-prompt-thumb img:hover{
@@ -1705,6 +1705,7 @@ hr{
     bottom: 172px;
     width: 100%;
     left: 0;
+    pointer-events: none;
 }
 @-moz-document url-prefix() {
     #audioVisualizer {
@@ -1715,7 +1716,71 @@ hr{
     position: absolute;
     left: 0px;
     margin: 0px auto;
-    right: 0px;    
+    right: 0px;
+}
+
+.image-upload-wrapper {
+    width: 60px;
+    height: 60px;
+    min-width: 60px;
+    min-height: 60px;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+}
+.spinner-vision{
+    opacity: 0;
+}
+.image-upload-wrapper .spinner-border{
+    position: absolute;
+    color: #FFF;
+    z-index: 2;
+    pointer-events: none;
+    box-shadow: 2px 3px 23px 1px #23a2ff;
+    pointer-events: none;
+}
+
+.image-label {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-label i {
+    font-size: 24px;
+}
+
+.image-preview {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.thumbnail-vision-img{
+    float: left;
+    max-width: 154px;
+    border-radius: 10px;
+    margin-right: 1em;
+}
+.remove-icon{
+    position: absolute;
+    top: -9px;
+    right: -9px;
+    z-index: 22;
+    color: #cf0000;
+    font-size: 22px;
+}
+.remove-icon:hover{
+    cursor: pointer;
 }
 /*/ Small devices (landscape phones, 576px and up)/*/
 @media (max-width: 767px){
@@ -1723,7 +1788,7 @@ hr{
         position: absolute;
         bottom: 80px;
         z-index: -1;
-    }    
+    }
     .chat-action-buttons{
         margin-right: 10px;
     }
@@ -1774,7 +1839,7 @@ hr{
     }
     .wrapper-category{
         grid-template-columns: repeat(2, 1fr);
-    }    
+    }
     .chat-alert-mobile{
         bottom: 0;
         left: 0;
@@ -1782,7 +1847,7 @@ hr{
     }
     .btn-sign-in{
         display: inline-block !important;
-        margin-bottom: 1em;        
+        margin-bottom: 1em;
     }
     .wrapper-suggestion-group p{
         margin-right: 0;
@@ -1791,7 +1856,7 @@ hr{
     .suggestions_modal, .about_modal{
         display: none;
     }
-    
+
     .panel-ai-chat{
         display: flex;
         flex-direction: column;
@@ -1806,12 +1871,12 @@ hr{
         flex-direction: column;
         align-items: center;
         justify-content: center;
-    }    
+    }
     .panel-ai-chat .ai-chat-top-info{
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;        
+        justify-content: center;
     }
     .ai-chat-top-name h4{
         margin-top: 1em;
@@ -1825,7 +1890,7 @@ hr{
         width: 100%;
     }
     .offcanvas-custom{
-        background: linear-gradient(180deg, #1995f0 0%, #0072c6 100%);    
+        background: linear-gradient(180deg, #1995f0 0%, #0072c6 100%);
     }
     .offcanvas-custom .nav-item{
         padding: 0.5em 0;
@@ -1861,7 +1926,7 @@ hr{
         top: -36px;
         border-radius: 10px 10px 0 0;
         user-select: none;
-    }    
+    }
     .form-f-chat{
         display: none;
     }
@@ -1872,7 +1937,7 @@ hr{
       border-right: 10px solid transparent;
       border-bottom: 10px solid #FFFFFF;
      transform: rotate(0deg);
-    }    
+    }
     .arrow-up {
       width: 0;
       height: 0;
@@ -1880,7 +1945,7 @@ hr{
       border-right: 10px solid transparent;
       border-bottom: 10px solid #FFFFFF;
      transform: rotate(180deg);
-    }       
+    }
    .col-options-input{
         display: flex;
         flex-wrap: wrap;
@@ -1893,13 +1958,13 @@ hr{
         z-index: 0;
         box-shadow: 0 -26px 21px -5px #0180de42;
         width: 100%;
-    }    
+    }
     .character-typing {
         top: -42px;
         right: auto;
         margin: initial;
         z-index: 10;
-    }    
+    }
     .character-typing div{
         font-size: 14px;
         padding: 4px 16px;
@@ -1909,15 +1974,15 @@ hr{
         position: absolute;
         bottom: 77px;
         right: -1px;
-    }    
+    }
     .ai-chat-top-name h4{
         font-size: 16px;
     }
     .ai-chat-top-job{
       display: -webkit-box;
       -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;  
-      overflow: hidden;         
+      -webkit-box-orient: vertical;
+      overflow: hidden;
       font-size: 14px;
     }
     .col-main-chat{
@@ -1939,14 +2004,14 @@ hr{
     }
     .icons-options img {
         padding: 0 2px;
-    }    
+    }
     .mobile-body{
         background: url(../img/chat-pattern.png) #F3F3F3;
     }
     .chat-frame{
         padding-top: 1em;
     }
-    
+
     .ai-contacts-top, .ai-chat-top{
         min-height: auto;
     }
@@ -1967,7 +2032,7 @@ hr{
         top: -15px;
         z-index: 1;
         left: -9px;
-    }    
+    }
     .thread-ai .message-container{
         margin-right: 0;
     }
@@ -1990,7 +2055,7 @@ hr{
     }
     .btn-send-chat, .btn-cancel-chat{
         padding: 0.6em 1em;
-        font-size: 16px;        
+        font-size: 16px;
         border-radius: 3px;
     }
     .message-area-bottom{
@@ -2021,7 +2086,7 @@ hr{
         display: flex;
         flex-direction: column;
         align-items: center;
-    }    
+    }
     #hero .btn{
         font-size: initial;
     }
@@ -2055,7 +2120,7 @@ hr{
     }
     .container{
         max-width: 100%;
-    }     
+    }
     .wrapper-vip-credit-pack{
         flex-basis: calc(100% - 20px);
     }
@@ -2073,7 +2138,7 @@ hr{
 }
 
 /*/ Medium devices (tablets, 768px and up)/*/
-@media (min-width: 768px) and (max-width: 991px){  
+@media (min-width: 768px) and (max-width: 991px){
     .wrapper-category{
         grid-template-columns: repeat(5, 1fr);
     }
@@ -2085,13 +2150,13 @@ hr{
 
     .pricing .card:hover .btn {
         opacity: 1;
-    }    
+    }
     .form-floating{
         display: flex;
     }
     #microphone-button{
         height: 45px;
-    }    
+    }
     .container{
         max-width: 90%;
     }
@@ -2124,7 +2189,7 @@ hr{
     .primary-menu li a{
         margin-right: 0;
         width: 100%;
-    }      
+    }
     .nav-item{
         width: 100%;
         text-align: center;
@@ -2139,7 +2204,7 @@ hr{
 @media (min-width: 992px) and (max-width: 1199px) {
     .form-floating{
         display: flex !important;
-    }    
+    }
     #hero p{
         padding-right: 4.5em;
     }
@@ -2151,13 +2216,13 @@ hr{
         max-height: 250px;
         min-height: 250px;
     }
-    
+
     #microphone-button{
         height: 45px;
-    }    
+    }
     .thread-user .message-container{
         min-width: 300px;
-    }    
+    }
     .wrapper-vip-credit-pack{
         flex-basis: calc(33% - 20px);
     }
@@ -2167,24 +2232,24 @@ hr{
 @media (min-width: 1200px) and (max-width: 1399px){
     .form-floating{
         display: flex !important;
-    }    
+    }
     .card-ai-image{
         min-height: 280px;
     }
     .thread-user .message-container{
         min-width: 300px;
-    }    
+    }
 }
 
 /*/// XX-Large devices (larger desktops, 1400px and up)/*/
 @media (min-width: 1400px) {
     .form-floating{
         display: flex !important;
-    }    
+    }
     .card-ai-image{
         min-height: 300px;
     }
     .thread-user .message-container{
         min-width: 300px;
-    }    
+    }
 }
