--- a/style/dark-mode.css
+++ b/style/dark-mode.css
@@ -10,7 +10,7 @@ body.dark-mode, .dark-mode .bg-white {
     border-bottom: 1px solid #3d3d3d;
 }
 .dark-mode footer {
-    background: #111111;    
+    background: #111111;
 }
 .dark-mode .default-title, .dark-mode p, .dark-mode .card-ai-job span {
     color: #E6E6E6;
@@ -56,7 +56,7 @@ body.dark-mode, .dark-mode .bg-white {
     border-right: 1px solid #3f3f3f;
 }
 .dark-mode .ai-contacts-item {
-    border-bottom: 1px solid #3f3f3f;   
+    border-bottom: 1px solid #3f3f3f;
 }
 .dark-mode .ai-contacts-name {
     color: #FFF;
@@ -66,7 +66,7 @@ body.dark-mode, .dark-mode .bg-white {
     border-left: 3px solid #4caf50;
 }
 .dark-mode .ai-contacts-scroll {
-    background: #212121;    
+    background: #212121;
 }
 .dark-mode .ai-contacts-top strong {
     color: #FFF;
@@ -102,7 +102,7 @@ body.dark-mode, .dark-mode .bg-white {
     border: 1px solid #4f4f4f;
 }
 .dark-mode .thread-user .message-container {
-    border: 1px solid #4f4f4f;  
+    border: 1px solid #4f4f4f;
 }
 .dark-mode .message-container::before {
     left: -11px;
@@ -128,11 +128,11 @@ body.dark-mode, .dark-mode .bg-white {
     text-decoration: none;
 }
 .dark-mode .ai-contacts-scroll::-webkit-scrollbar {
-  width: 4px; 
+  width: 4px;
 }
 .dark-mode #overflow-chat::-webkit-scrollbar-thumb {
-  background-color: #888; 
-  border-radius: 5px; 
+  background-color: #888;
+  border-radius: 5px;
 }
 .dark-mode .copy-text, .dark-mode .copy-text:hover {
     color: #FFF;
@@ -234,7 +234,7 @@ body.dark-mode, .dark-mode .bg-white {
     background: #252525;
 }
 .dark-mode .message-area-bottom {
-    background: #252525;    
+    background: #252525;
 }
 .dark-mode .alert-warning{
     background: #232323;
@@ -332,5 +332,8 @@ body.dark-mode, .dark-mode .bg-white {
     box-shadow: 2px 3px 17px -2px #494949;
 }
 .dark-mode ul,.dark-mode ol,.dark-mode li{
+    color: #FFF;
+}
+.dark-mode .bi-card-image::before{
     color: #FFF;
 }
